# human

./: .gitignore  CMakeLists.txt  README.md
cmake/: configs.cmake  includes.cmake  libraries.cmake
src/: main.cpp  main.hpp
src/app/core/: face_detector.cc  face_detector.hh
src/app/entities/: camera.cc  camera.hh
src/app/ui/: mainframe.cc  mainframe.cpp  mainframe.hh
src/app/ui/panels/: video_feed_panel.cc  video_feed_panel.hh
src/app/util/: image_utils.cc  image_utils.hh
src/config/: config.cc  config.hh
util/: build.sh  clean.sh  dependencies.sh  test.sh
